--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.4",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "reactstrap": "^9.2.0",
     "web-vitals": "^2.1.4"
   },
   "overrides": {
